# market-analysis-scripts

./: f02d.xlsx:Zone.Identifier  pyproject.toml
scripts/: get_fundamentals.py  plot_ten_two_spread.py  plot_us_tentwo_spread.py
scripts/plotting/manual/: plot_au_tentwo_spread.py
scripts/scanning/: scan_asx_fundamentals.py
scripts/scraping/: fetch_us_treasury_yields.py
