[tool.poetry]
name = "market-analysis-scripts"
version = "0.1.0"
description = "A compilation of scripts for securities investment/market analysis."
authors = ["mmrakib <mohammadmrakib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
requests = "^2.32.3"
openpyxl = "^3.1.5"
yfinance = "^0.2.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
